リポジトリ名を変更

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-train-distance",
+  "name": "distance-to-train-lines",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Tomoharu Watanabe <tomoharu.dev@gmail.com>",
